creacion de las categorias y los proveedores

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,13 +60,13 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: rgb(231, 231, 231);
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: border-box; 
 }
 
 @media (prefers-reduced-motion: no-preference) {
