--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11686,3 +11686,31 @@ body {
   font-size: 0.75rem;
   border-radius: 0.25rem !important;
 }
+
+
+/**datos agregados para que funcione el BOOTBOX */
+.bootbox-body{
+  font-size: 1.2rem;
+}
+.modal-body > .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.5rem 0.75rem;
+  z-index: 1;
+}
+
+button.close {
+  padding: 5;
+  background-color: transparent;
+  border: 0;
+  -webkit-appearance: none;
+  
+}
+/*
+.bootbox-close-button.close{
+  padding: 0.5rem 0.5rem;
+  margin: -0.5rem -0.5rem -0.5rem auto;
+  float: right !important;
+}
+*/
